	PR c++/40138 	* fold-const.c (operand_equal_p): Handle erroneous types.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156483 138bc75d-0d04-0410-961f-82ee72b054a4